<resources>
    <string name="app_name">今日天气</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="multi_city">开启多城市</string>
    <string name="no_network">网络不好(˵¯͒⌢͗¯͒˵)</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="headerTxt">今日天气</string>
    <string name="title_activity_settings">Settings</string>
    <string name="api_error">出了点小问题，别担心，( •̀ .̫ •́ )✧</string>
    <string name="version_name">今日天气 Version-</string>
    <string name="can_not_find_version_name">找不到版本号</string>
    <string name="share_txt">欢迎使用“今日天气”，希望每天都是好心情，您可以在http://www.wandoujia.com/apps/com.xiecc.seeWeather下载</string>
    <string name="share_app">分享-今日天气</string>
    <string name="alipay">xcc3641@163.com</string>
    <string name="license">Copyright 2016 HugoXie  Licensed under the Apache License, Version 2.0 (the \"License\")</string>
    <string name="app_html">https://github.com/xcc3641/SeeWeather</string>
    <string name="readme">https://github.com/xcc3641/SeeWeather/blob/master/README.md</string>

    <string name="chage_icon">更换图标</string>
    <string name="nav_city">选择城市</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="multi_cities">多城市管理</string>
    <string name="double_exit">再按一次退出</string>
    <string name="complete">加载完毕，✺◟(∗❛ัᴗ❛ั∗)◞✺,</string>
    <string name="errorLocation">定位失败,加载默认城市</string>

    <string name="aboutContent">就看天气该应用就是如同它的名字一样，只做一个单纯、简单的看天气软件。这么多天气软件，你选择了我，这是我的幸运。\n从15年10月上线，到目前经历两次重大改版，一次代码的重构，一次界面的大幅度改动，目的都是为了你们。
    在开源的过程中，收到了很多来自有趣的你们的邮件。\n我也曾遇到过棘手的问题无处咨询又谷歌不到。那个时候的我，也可能是现在的你。所以我希望能够帮助到你。</string>
    <string name="open_source">• RxJava: github.com/ReactiveX/RxJava\n• RxAndroid: github.com/ReactiveX/RxAndroid\n• Retrofit: github.com/square/retrofit\n• Glide: github.com/bumptech/glide\n• YujunZhu 设计师提供多城市卡片设计\n• 和风天气提供数据支持\n• 高德定位提供位置定位服务</string>
    <string name="bugTableUrl">https://www.wenjuan.com/s/YbqANfc/</string>
    <string-array name="icons">
        <item>图标一</item>
        <item>图标二</item>
    </string-array>

    <string-array name="cache_time">
        <item>禁止刷新</item>
        <item>每1小时</item>
        <item>每3小时</item>
        <item>每6小时</item>
    </string-array>

</resources>
