<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
   <group android:checkableBehavior="single">
       <item
           android:id="@+id/nav_city"
           android:icon="@drawable/ic_location"
           android:title="@string/nav_city"/>
       <item
           android:id="@+id/nav_multi_cities"
           android:icon="@drawable/ic_multi_cities"
           android:title="@string/multi_cities"/>
   </group>
    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_set"
                android:title="@string/setting"
                android:icon="@drawable/ic_menu_set"/>
            <item
                android:id="@+id/nav_about"
                android:title="@string/about"
                android:icon="@drawable/ic_menu_about"/>
        </menu>
    </item>
</menu>